@@ -3,6 +3,15 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2014-08-05	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-86-55:
+	  Merged prsim-timing-backannot branch.
+		This allows users to modify rules' after delays
+		and add min-delay constraints at run-time.
+		Constraints may be directional and predicated.
+
+
 2014-06-24	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-86-53-prsim-timing-backannot-03:
